<?xml version="1.0" encoding="UTF-8"?>

<!--
    Document   : help.xml
    Created on : March 26, 2008, 3:25 PM
    Author     : gunasekaran
    Description:
        Purpose of the document follows.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/help"
              android:orientation="vertical"
              android:padding="4dip"
              android:gravity="center_horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#ffffff">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/help"
                      android:orientation="vertical"
                      android:padding="4dip"
                      android:gravity="center_horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:background="#ffffff">


            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:textSize="14px"
                      android:paddingBottom="4dip"
                      android:textColor="#B93DB9"
                      android:text="@string/help"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/helpprofile"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/helppartner"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/helpservice"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq1"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq2"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq3"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq4"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq5"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq6"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq7"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq8"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq9"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq10"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq11"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq12"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq13"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq14"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq15"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq16"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq17"/>
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="0"
                      android:paddingBottom="4dip"
                      android:textSize="12px"
                      android:textColor="#4b0082"
                      android:text="@string/faq18"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>